--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.830.0",
     "@aws-sdk/s3-request-presigner": "^3.830.0",
     "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
     "cloudflared": "^0.7.0",
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
