--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
