--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
