--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "24.0.10",
+    "@types/react": "19.1.8",
     "eslint": "^9.30.0",
     "eslint-config-next": "^15.3.3",
     "tailwindcss": "^4.1.11"
