--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
