--- a/package.json
+++ b/package.json
@@ -35,8 +35,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
     "@types/node": "24.0.10",
     "@types/react": "19.1.8",
+    "@types/uuid": "^10.0.0",
+    "@types/webidl-conversions": "^7.0.3",
+    "@types/whatwg-url": "^13.0.0",
     "eslint": "^9.30.0",
     "eslint-config-next": "^15.3.3",
     "tailwindcss": "^4.1.11"
