--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "es2021"        // ✅ Add this line
     ],
     "allowJs": true,
     "skipLibCheck": true,
